crates/rargc/tests/snapshots/test_scripts__impl-127.snap
---
source: crates/rargc/tests/test_scripts.rs
description: "[stdout] catch-all-global.sh other"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
args: none

