crates/rargc/tests/snapshots/test_scripts__impl-129.snap
---
source: crates/rargc/tests/test_scripts.rs
description: "[stdout] catch-all-global.sh something, something, the dark side"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
args: none

other_args:
- ${other_args[*]} = something, something, the dark side
- ${other_args[0]} = something,
- ${other_args[1]} = something,
- ${other_args[2]} = the
- ${other_args[3]} = dark
- ${other_args[4]} = side

